--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "accounting-js": "^1.1.1",
     "firebase": "^4.8.1",
     "vue": "^2.5.11",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "browserslist": [
     "> 1%",
